--- a/asteroids.html
+++ b/asteroids.html
@@ -6,6 +6,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
   </head>
   <body>
+  <script type="text/javascript" src="draw.js"></script>
+  <script type="text/javascript" src="ship.js"></script>
   <script type="text/javascript" src="asteroids.js"></script>
   </body>
 </html>
