--- a/asteroids.html
+++ b/asteroids.html
@@ -9,5 +9,6 @@
   <script type="text/javascript" src="draw.js"></script>
   <script type="text/javascript" src="ship.js"></script>
   <script type="text/javascript" src="asteroids.js"></script>
+  <script type="text/javascript" src="laser.js"></script>
   </body>
 </html>
